--- a/docs/docs/usage/pathname.mdx
+++ b/docs/docs/usage/pathname.mdx
@@ -145,7 +145,9 @@ export async function handler(request: Request) {
 
 ## Pathname Extraction
 
-**Note:** The pathname is automatically extracted from the request URL. The pathname does not include query parameters or hash fragments. For example, a URL like `https://example.com/api/users?page=1#section` will have a pathname of `"/api/users"` (without the query or hash).
+<Callout type="info">
+  The pathname is automatically extracted from the request URL. The pathname does not include query parameters or hash fragments. For example, a URL like `https://example.com/api/users?page=1#section` will have a pathname of `"/api/users"` (without the query or hash).
+</Callout>
 
 ```tsx
 import { requestSchema } from "zod-request";
