--- a/docs/docs/usage/index.mdx
+++ b/docs/docs/usage/index.mdx
@@ -51,7 +51,7 @@ export async function POST(request: Request) {
   // All validated data is now type-safe
   const filter = validatedRequest.searchParamsObject.filter;
   const name = validatedRequest.bodyObject.name;
-  const auth = validatedRequest.headers.authorization;
+  const auth = validatedRequest.headersObj.authorization;
   const method = validatedRequest.method; // "POST"
 }
 ```
