--- a/docs/docs/usage/mode.mdx
+++ b/docs/docs/usage/mode.mdx
@@ -105,7 +105,7 @@ export async function POST(request: Request) {
   const method = validatedRequest.method; // "POST"
   const filter = validatedRequest.searchParamsObject?.filter;
   const name = validatedRequest.body?.name;
-  const auth = validatedRequest.headers?.authorization;
+  const auth = validatedRequest.headersObj?.authorization;
 }
 ```
 
