--- a/docs/docs/usage/hostname.mdx
+++ b/docs/docs/usage/hostname.mdx
@@ -125,7 +125,7 @@ export async function POST(request: Request) {
 
 ## Error Handling
 
-If the request hostname doesn't match the schema, a validation error will be thrown:
+If the request hostname doesn't match the schema, a validation error will be thrown if you use `parse` or `parseAsync`.
 
 ```tsx
 import { requestSchema } from "zod-request";
@@ -146,7 +146,10 @@ export async function handler(request: Request) {
 ## Hostname Extraction
 
 <Callout type="info">
-  The hostname is automatically extracted from the request URL. The hostname does not include the port number, even if the URL contains one. For example, a URL like `https://example.com:8080` will have a hostname of `"example.com"` (without the port).
+  The hostname is automatically extracted from the request URL. The hostname
+  does not include the port number, even if the URL contains one. For example, a
+  URL like `https://example.com:8080` will have a hostname of `"example.com"`
+  (without the port).
 </Callout>
 
 ```tsx
